# Laba3_beta

./: CMakeLists.txt  test.tsv
include/: create_bmp.h  deq.h  parsing.h  sandpile.h
src/: create_bmp.cpp  main.cpp  parsing.cpp  sandpile.cpp
